Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98878

Bluetooth LE characteristic Indication manual test fails on darwin server

XMLWordPrintable

    • iOS/tvOS/watchOS, macOS
    • 8
    • 95f349237b (qt/qtconnectivity/dev) 1e7babbee6 (qt/qtconnectivity/6.3) f26b0a2cfd (qt/qtconnectivity/6.2) f26b0a2cfd (qt/tqtc-qtconnectivity/6.2) 1e7babbee6 (qt/tqtc-qtconnectivity/6.3) 95f349237b (qt/tqtc-qtconnectivity/dev)
    • Team 1 Foundation_Sprint 48

      When running the tst_qlowenergycontroller_device test against the bluetoothtestdevice (server) on a macOS, the characteristic value does not update when configured to update with an "indicate". It does update when configured to update with a "notify". Linux and Android servers pass the same test.

      At this point it is difficult to say what this is, it could be a testcase bug, an implementation bug, or a limitation/feature of darwin's CoreBluetooth.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vuokko Juha Vuolle
            vuokko Juha Vuolle
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes