Don't disconnect Darwin BT LE server on characteristic unsubscribe

The darwin CoreBluetooth does not really report client-device
(dis)connect events on the server side. Instead we use some heuristics
on the Qt backend to detect these. One heuristic for disconnection
was unsubscription from a characteristic, which however causes a
problem; there may still be several clients connected (and possibly
subscribed) and we shouldn't shut down the server.

Checking if there are subscriptions left on any of the characteristics
wouldn't be adequate either, as a client can be connected and
functional without any subscriptions too.

Fixes: QTBUG-98878
Pick-to: 6.2 6.3
Change-Id: I36a37484ef3c98449ad43fd0463f682994c53568
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>